# backend/api/api.go
@@ -1,19 +1,25 @@
 package api
 
 import (
+	"context"
 	"database/sql"
 	"encoding/json"
+	"log"
 	"log/slog"
 	"net/http"
+	db "retinaguard/db/db/sqlc"
 	"retinaguard/models"
 
 	"github.com/go-chi/chi"
 	"github.com/go-chi/chi/middleware"
+	"github.com/google/uuid"
 	httpSwagger "github.com/swaggo/http-swagger"
+	"golang.org/x/crypto/bcrypt"
 )
 
-func NewHandler(db *sql.DB) http.Handler {
+func NewHandler(database *sql.DB) http.Handler {
 	r := chi.NewMux()
+	queries := db.New(database)
 
 	r.Use(middleware.Recoverer)
 	r.Use(middleware.RequestID)
@@ -21,8 +27,8 @@ func NewHandler(db *sql.DB) http.Handler {
 
 	r.Get("/api/healthy", healthyHandler())
 	r.Get("/api/swagger/*", httpSwagger.WrapHandler)
-	r.Post("/api/login", loginHandler())
-	r.Post("/api/patient", createPatientHandler(db))
+	r.Post("/api/login", loginHandler(queries))
+	r.Post("/api/patient", createPatientHandler(queries))
 
 	return r
 }
@@ -45,7 +51,7 @@ func sendJSON(w http.ResponseWriter, resp models.Response, status int) {
 // getHealthy
 // @Summary Check healthy
 // @Description Check if application if healthy
-// @Tags healthy Handler
+// @Tags Healthy Handler
 // @Accept json
 // @Produce json
 // @Success 200 {object} models.HealthyResponse
@@ -58,56 +64,28 @@ func healthyHandler() http.HandlerFunc {
 	}
 }
 
-// postLogin
-// @Summary Get access token
-// @Description Get your access token
-// @Tags login Handler
-// @Accept json
-// @Produce json
-// @Success 200 {object} models.AuthResponse
-// @Router /api/login [POST]
-func loginHandler() http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		var u models.User
-		json.NewDecoder(r.Body).Decode(&u)
-
-		if u.Username == "Chek" && u.Password == "123456" {
-			accessToken, err := CreateToken(u.Username)
-			if err != nil {
-				sendJSON(w, models.Response{Data: models.Response{Error: err.Error()}}, http.StatusInternalServerError)
-			}
-			sendJSON(w, models.Response{Data: models.AuthResponse{AccessToken: accessToken}}, http.StatusOK)
-			return
-		} else {
-			sendJSON(w, models.Response{Data: models.Response{Error: "Invalid credentials"}}, http.StatusUnauthorized)
-		}
-	}
-}
-
 // createPatientHandler
 // @Summary Create patient
 // @Description Create patient
-// @Tags Create patient handler
+// @Tags Create Patient Handler
 // @Accept json
 // @Produce json
-// @Success 201 {object} models.AuthResponse
+// @Success 201 {object} models.User
 // @Router /api/patient [POST]
-func createPatientHandler(db *sql.DB) http.HandlerFunc {
+func createPatientHandler(queries *db.Queries) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		var u models.User
 		json.NewDecoder(r.Body).Decode(&u)
+		hashedPassword, _ := bcrypt.GenerateFromPassword([]byte(u.Password), bcrypt.DefaultCost)
 
-		//	db.
+		err := queries.CreateUser(context.Background(), db.CreateUserParams{ID: uuid.New().String(),
+			Email: u.Email, Password: string(hashedPassword)})
+		if err != nil {
+			log.Println("Erro ao criar usuário:", err)
+			sendJSON(w, models.Response{Data: models.Response{Error: "Erro ao criar usuário"}}, http.StatusBadGateway)
 
-		if u.Username == "Chek" && u.Password == "123456" {
-			accessToken, err := CreateToken(u.Username)
-			if err != nil {
-				sendJSON(w, models.Response{Data: models.Response{Error: err.Error()}}, http.StatusInternalServerError)
-			}
-			sendJSON(w, models.Response{Data: models.AuthResponse{AccessToken: accessToken}}, http.StatusOK)
-			return
-		} else {
-			sendJSON(w, models.Response{Data: models.Response{Error: "Invalid credentials"}}, http.StatusUnauthorized)
 		}
+		sendJSON(w, models.Response{Data: models.Response{}}, http.StatusCreated)
+
 	}
 }
