# backend/db/db/sqlc/models.go
@@ -1,0 +1,11 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.28.0
+
+package db
+
+type User struct {
+	ID       string
+	Password string
+	Email    string
+}
