# backend/docs/swagger.json
@@ -24,7 +24,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "healthy Handler"
+                    "Healthy Handler"
                 ],
                 "summary": "Check healthy",
                 "responses": {
@@ -47,14 +47,37 @@
                     "application/json"
                 ],
                 "tags": [
-                    "login Handler"
+                    "Login Handler"
                 ],
-                "summary": "Get access token",
+                "summary": "Get access token teste",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.AuthResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/patient": {
+            "post": {
+                "description": "Create patient",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Create Patient Handler"
+                ],
+                "summary": "Create patient",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
                         }
                     }
                 }
@@ -75,6 +98,20 @@
             "properties": {
                 "is_healthy": {
                     "type": "boolean"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "Email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         }
